--- a/project/Application/Home/View/Shop/index.html
+++ b/project/Application/Home/View/Shop/index.html
@@ -106,7 +106,7 @@
                         title: '编辑店铺',
                         skin: 'layui-layer-rim', //加上边框
                         area: ['620px', '440px'], //宽高
-                        content:'<form action="/home/test" method="post" id="shopMod"><div class="bindShopTip"><ul class="shopTipContent"><li>店铺首页网址<span class="grey">（店铺绑定后无法修改）</span><p>'+data.shop_url+'</p><input type="hidden" class="input-text"  name="shop_url" value="'+data.shop_url+ '""></li><li>店铺账号（主账号）<span class="grey">（绑定后无法修改)</span><p>'+data.shop_name+'</p><input type="hidden" name="shop_name" class="input-text" value="'+data.shop_name+ '""></li></ul><span class="senderName">发件人姓名：<input type="text" name="sender_name" value="'+data.sender_name+'" ></span><span class="senderPhone">发件人电话：<input type="text" name="sender_mobile" value="'+data.sender_mobile+'" ></span><br><span class="treCitylist clearfix"><span>发件人地址：</span><div id="province"></div></span><span class="senderPlace clearfix">发件详细地址：<input type="text" name="sender_address" value="'+data.sender_address+'" ></span><span class="placeCode">揽件网点编码：<input type="text" name="sender_code" value="'+data.sender_code+'" ><span class="grey">填写【公司编号】</span></span><span class="CodeSearch clearfix">编号查询网站：<a href="#" class="gold">http://www.yundaex.com/fuwuwangdian_search.php</a></span><input type="hidden" name="id" value="'+data.id+'""><button name="" id="" class="btn btn-success btnSure mt-20 sureMod" type="button">确认</button></div></form>'
+                        content:'<form action="/home/test" method="post" id="shopMod"><div class="bindShopTip"><ul class="shopTipContent"><li>店铺首页网址<span class="grey">（店铺绑定后无法修改）</span><p>'+data.shop_url+'</p><input type="hidden" class="input-text"  name="shop_url" value="'+data.shop_url+ '""></li><li>店铺账号（主账号）<span class="grey">（绑定后无法修改)</span><p>'+data.shop_name+'</p><input type="hidden" name="shop_name" class="input-text" value="'+data.shop_name+ '""></li></ul><span class="senderName">发件人姓名：<input type="text" name="sender_name" value="'+data.sender_name+'" ></span><span class="senderPhone">发件人电话：<input type="text" name="sender_mobile" value="'+data.sender_mobile+'" ></span><br><span class="treCitylist clearfix"><span>发件人地址：</span><div id="province"></div></span><span class="senderPlace clearfix">发件详细地址：<input type="text" name="sender_address" value="'+data.sender_address+'" ></span><span class="placeCode">揽件网点编码：<input type="text" name="sender_code" value="'+data.sender_code+'" ><span class="grey">填写【公司编号】</span></span><span class="CodeSearch clearfix">编号查询网站：<a href="#" class="gold">http://www.yundaex.com/fuwuwangdian_search.php</a></span><input type="hidden" name="id" value="'+data.id+'""><input type="hidden" name="shop_type" value="'+data.shop_type+'""><button name="" id="" class="btn btn-success btnSure mt-20 sureMod" type="button">确认</button></div></form>'
                     });
                     $("#province").ProvinceCity();
                     var prc=data.sender_province,
@@ -124,9 +124,9 @@
     $(document).on('click',".sureMod",function() {
         var datas = $("#shopMod").serialize(); 
         $.ajax({
-            type: "GET",
+            type: "post",
              url: "/home/shop/edit",
-             data: {data:datas},
+             data: datas,
              dataType: "json",
              timeout:20000,
              success: function(){
@@ -137,7 +137,7 @@
     });
     function bindShop(obj,id){
        
-        var thisCur = $(' .choosebox .current span').html().trim();
+        var thisCur = $('.choosebox .current').siblings().val();//$(' .choosebox .current span').html().trim();
         if(id=='10001'){
             layer.open({
               type: 1,
@@ -148,15 +148,15 @@
             });
         };
         $("#province").ProvinceCity();
-        $('.bindShopTip').append("<input type='hidden' type='id' value='"+ thisCur+"' >");
+        $('.bindShopTip').append('<input type="hidden" name="shop_type" value="'+ thisCur+'" >');
     }
 
     $(document).on('click',".addSure",function() {
-        var datas = $("#shopBind").serialize(); debugger;
+        var datas = $("#shopBind").serialize();
         $.ajax({
-            type: "GET",
+            type: "post",
              url: "/home/shop/add",
-             data: {data:datas},
+             data: datas,
              dataType: "json",
              timeout:20000,
              success: function(){
