--- a/project/Application/Home/View/Task/index.html
+++ b/project/Application/Home/View/Task/index.html
@@ -6,7 +6,7 @@
     <div class="Hui-article">
         <article class="cl pd-20">
             <div class="panel panel-default mt-20">
-                <div class="panel-header">待处理任务<a href="publish.html" target="_blank" class="fr red"><i class="Hui-iconfont">&#xe692;</i>&nbsp;&nbsp;我要发任务</a></div>
+                <div class="panel-header">待处理任务<a href="/home/task/add" target="_blank" class="fr red"><i class="Hui-iconfont">&#xe692;</i>&nbsp;&nbsp;我要发任务</a></div>
                 <div class="panel-body">
                     <div class="overview-wrapper clearfix">
                         <div class="overview-box floatLeft">
