--- a/project/Application/Home/View/Task/add.html
+++ b/project/Application/Home/View/Task/add.html
@@ -1064,6 +1064,7 @@
 <{block 'footer_script'}>
 <script type="text/javascript">
     var shops = <{$shopsJson}>;
+    var group_shops = <{$groupShopsJson}>;
 </script>
 
     <script type="text/javascript" src="/lib/My97DatePicker/WdatePicker.js"></script>
